<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppActividadesNombre</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Analizador de palabras</string>
    <string name="name">Texto:</string>
    <string name="accept">Aceptar</string>
    <string name="res">(introduce tu nombre)</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="length">Largo:</string>
    <string name="words">Palabras:</string>
    <string name="empty">(Vacio)</string>

</resources>
