<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SecondActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/textViewNombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="24dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textViewLargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewNombre2"
        android:layout_below="@+id/textViewNombre2"
        android:layout_marginTop="25dp"
        android:text="@string/length" />

    <TextView
        android:id="@+id/textViewPalabras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLargo"
        android:layout_below="@+id/textViewLargo"
        android:layout_marginTop="27dp"
        android:text="@string/words" />

    <TextView
        android:id="@+id/textViewNombreRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewNombre2"
        android:layout_alignBottom="@+id/textViewNombre2"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/textViewLargoRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewLargo"
        android:layout_alignBottom="@+id/textViewLargo"
        android:layout_alignLeft="@+id/textViewNombreRes"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/textViewPalabrasRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewPalabras"
        android:layout_alignLeft="@+id/textViewLargoRes"
        android:text="@string/empty" />

</RelativeLayout>